--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                 lang_ability_title: "语言能力",
                 english: "英语：",
                 ielts: "IELTS 7.0（Listening: 7.5, Reading: 8.5, Writing: 6.5, Speaking: 6.0）",
-                gre: "GRE 313【等考完再加上】",
+                gre: "GRE【等考完再加上】",
                 toefl: "TOEFL【等考完再加上】",
                 spanish: "西班牙语：",
                 spanish_course: "完成复旦大学西班牙语通识课程，计划2026年考DELE A2",
