--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
                 achievements_desc: "因学术卓越、科研贡献及课外领导力而受到表彰。",
                 awards_link: "查看详细奖项",
                 contact: "联系方式",
-                phone: "电话 & WhatsApp: +86 186 5282 9333",
+                phone: "电话 & 微信: 186 5282 9333",
                 email: "邮箱: m18652829333@163.com / 22307130073@m.fudan.edu.cn",
                 linkedin: "领英: www.linkedin.com/in/yanxiang-zhu",
                 github: "GitHub: https://github.com/Yanxiang-ZHU",
